2006-09-17  Brian Bidulock  <bidulock@openss7.org>
	
	* doc/manual/news.texi: major update notices
	* configure.ac: added 32-bit binary directory lib32/Makefile.am
	* scripts/check_libs: strip library symbol version on check

	* Makefile.am: added 32-bit compatibility libraries and binaries
	* netperf.spec.in: added 32-bit compatibility libraries and binaries

2006-09-02  Brian Bidulock  <bidulock@openss7.org>

	* manual/Makefile.am: missing bugs.texi from release
	* am/release.am: changes to pass distcheck
	* configure.ac: changes to pass distcheck

2006-08-26  Brian Bidulock  <bidulock@openss7.org>

	* manual/todo.texi: added todo file
	* manual/bugs.texi: added bugs file
	* netbenchmark: updated scripts
	* netperf.macros: updated scripts
	* netperf.spec.in: updated scripts
	* netperf_arr: updated scripts
	* netperf_packet_byte: updated scripts
	* netperf_sctp_range: updated scripts
	* netperf_sctp_rr: updated scripts
	* netperf_sctp_stream: updated scripts
	* netperf_snapshot: updated scripts
	* netperf_tcp_range: updated scripts
	* netperf_tcp_rr: updated scripts
	* netperf_tcp_stream: updated scripts
	* netperf_udp_range: updated scripts
	* netperf_udp_rr: updated scripts
	* netperf_udp_stream: updated scripts

2006-08-25  Brian Bidulock  <bidulock@openss7.org>

        * am/release.am: added new release control file
	* manual/descrip.texi: added short description file

2006-08-24  Brian Bidulock  <bidulock@openss7.org>

	* manual/netperf.texi: some improvements to documentation
	* Makefile.am: automating release files
	* manual/Makefile.am: automating release files
	* manual/netperf.texi: automating release files
	* manual/prerequisites.texi: automating release files
	* manual/releases.texi: automating release files
	* manual/texi/quick.texi: automating release files
	* scripts/texi/macros.texi: automating release files
	* scripts/texi/versions.texi: automating release files

2006-08-23  Brian Bidulock  <bidulock@openss7.org>
