@@ -1,3 +1,8 @@
+2006-09-25  Brian Bidulock  <bidulock@openss7.org>
+
+	* acinclude.m4: added NSL includes to build
+	* nettest_xti.c: added explicit <sys/xti_sctp.h> include
+
 2006-09-17  Brian Bidulock  <bidulock@openss7.org>
 	
 	* doc/manual/news.texi: major update notices
